@@ -53,7 +53,7 @@ let lognot n = logxor n (-1L)
 let unsigned_to_int =
   let max_int = of_int Stdlib.max_int in
   fun n ->
-    if compare zero n <= 0 && compare n max_int <= 0 then
+    if n >= 0L && n <= max_int then
       Some (to_int n)
     else
       None
@@ -64,11 +64,8 @@ let to_string n = format "%d" n
 external of_string : string -> int64 = "caml_int64_of_string"
 
 let of_string_opt s =
-  (* TODO: expose a non-raising primitive directly. *)
   try Some (of_string s)
   with Failure _ -> None
-
-
 
 external bits_of_float : float -> int64
   = "caml_int64_bits_of_float" "caml_int64_bits_of_float_unboxed"
@@ -80,24 +77,27 @@ external float_of_bits : int64 -> float
 type t = int64
 
 let compare (x: t) (y: t) = Stdlib.compare x y
-let equal (x: t) (y: t) = compare x y = 0
+let equal (x: t) (y: t) = x = y
 
 let unsigned_compare n m =
   compare (sub n min_int) (sub m min_int)
 
+let unsigned_lt n m =
+  sub n min_int < sub m min_int
+
 let min x y : t = if x <= y then x else y
 let max x y : t = if x >= y then x else y
 
-(* Unsigned division from signed division of the same
-   bitness. See Warren Jr., Henry S. (2013). Hacker's Delight (2 ed.), Sec 9-3.
+(* Unsigned division from signed division of the same bitness.
+   See Warren Jr., Henry S. (2013). Hacker's Delight (2 ed.), Sec 9-3.
 *)
 let unsigned_div n d =
   if d < zero then
-    if unsigned_compare n d < 0 then zero else one
+    if unsigned_lt n d then zero else one
   else
     let q = shift_left (div (shift_right_logical n 1) d) 1 in
     let r = sub n (mul q d) in
-    if unsigned_compare r d >= 0 then succ q else q
+    if unsigned_lt r d then q else succ q
 
 let unsigned_rem n d =
   sub n (mul (unsigned_div n d) d)
