@@ -140,6 +140,10 @@ Working version
   (Nicolás Ojeda Bär, review by Jeremy Yallop, Xavier Leroy, Gabriel Scherer,
    David Allsopp)
 
+- #12511: Minor performance improvements and cleanups in the implementation
+  of modules Int32, Int64, and Nativeint
+  (Xavier Leroy, review by Gabriel Scherer and Daniel Bünzli)
+
 ### Other libraries:
 
 - #12213: Dynlink library, improve legibility of error messages
